z-index fix

--- a/css/universal.css
+++ b/css/universal.css
@@ -44,7 +44,7 @@ a, a:link, a:visited, a:hover, a:active {
 .box-container {
     width: 95%;
     background-color: var(--sub2-bg-color);
-    box-shadow: 0px 2px 2px #000000;
+    box-shadow: 0px 1px 3px #000000;
     border-radius: 8px;
     margin: 2.5% auto;
     overflow: hidden;
@@ -132,6 +132,8 @@ p.content {
     /* Required for text-overflow to do anything */
     white-space: nowrap;
     overflow: hidden;
+
+    z-index: 1001;
 }
 
 .title-menu {
@@ -248,7 +250,7 @@ p.content {
 }
 
 .button--add-task {
-    position: absolute;
+    position: fixed;
     right: 10px;
     bottom: 10px;
 
@@ -257,6 +259,8 @@ p.content {
 
     background-color: var(--sub2-bg-color);
     border-radius: 12px;
+
+    box-shadow: 0px 0px 5px #000000;
 }
 
 .icon--add-task {
